fix validation code

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -187,17 +187,11 @@ pre code {
 <div id="kristens-todo-list" class="section level2">
 <h2>Kristen’s todo list</h2>
 <ul>
-<li>remove dependency on multtest package</li>
-<li>unit test: no covariates</li>
-<li>unit test: does it work with J = 1? M = 1? K = 1?</li>
-<li>unblocked design</li>
-<li>allow user to give PowerUp names</li>
 <li>document remaining issues with sample size/mdes code, implement correct level of warnings</li>
-<li>write up WY validation</li>
-<li>unit tests for correlated and uncorrelated test statistics for sample size code</li>
-<li>should omega be a vector? check consistencny of all scalar and vector params</li>
+<li>remove dependency on multtest package</li>
+<li>allow user to give PowerUp names</li>
+<li>should omega be a vector? check consistency of all scalar and vector params</li>
 <li>understand unit test with correlated outcomes</li>
-<li>allow user to do no adjustment for sample size, mdes but only for individual power</li>
 </ul>
 </div>
 </div>
