--- a/project_tracker.html
+++ b/project_tracker.html
@@ -177,7 +177,7 @@ pre code {
 <li>Update with new naming convention (Kristen) Done!</li>
 <li>Complete code commenting (Kristen, TBD) Done enough.</li>
 <li>Complete all testing (Kristen and Luke, TBD) Done enough, will add tests as issues arise.</li>
-<li>Source code completed, ASCII files, with formatted help files and be packaged for easy installation. Work in progress.</li>
+<li>Source code completed, ASCII files, with formatted help files and be packaged for easy installation. Done.</li>
 <li>Submit package to CRAN - including JSS submission as vignettes in the package.</li>
 <li>Make sure all functions still work when specifying one outcome (Kristen) Done<br />
 </li>
@@ -188,40 +188,19 @@ pre code {
 <li>Change d1.1_m2cc to d1.1_m1c (and Kristen will check first) Done</li>
 <li>Kristin will send nots about credit - including ies grant number.</li>
 </ul>
-<div id="kristens-todo-list" class="section level2">
-<h2>Kristen’s todo list</h2>
-<p>Priority 1</p>
+</div>
+<div id="discussion-questions" class="section level1">
+<h1>Discussion questions</h1>
 <ul>
-<li>edits on shiny documentation</li>
-<li>search for papers in JSS</li>
-<li>write conclusion</li>
-</ul>
-<p>Priority 2</p>
-<ul>
-<li>set up Jonathan S for testing</li>
-<li>add flag for flat power curve to help with shiny app, work with Zarni to incorporate help procedure</li>
-</ul>
-<p>Priority 3</p>
-<ul>
-<li>once sample size code is stable, rerun all validation</li>
-<li>understand unit test with correlated outcomes</li>
-<li>update description file</li>
-<li>update WY documentation</li>
-<li>recruit Evan as reader</li>
-<li>WY follow up: WY with a small number of schools, large number of permutations, and no effect, do we get the intended power/p-value? What if we don’t do any adjustment–is it because of divergent/unstable models?</li>
-</ul>
-<div id="discussion-questions" class="section level3">
-<h3>Discussion questions</h3>
-<ul>
-<li>hash out power definitions: unadjusted p-values for complete power, whether or not to include zero outcomes for min power, complete power</li>
-<li>one tailed v. two tailed power</li>
-<li>update() for pump_sample, pump_mdes</li>
-<li>threshold for flatness?</li>
+<li>two-tailed power</li>
 <li>why are we hiding vignette output?</li>
 <li>better name for “design” because it currently means design + model. Scenario?</li>
+<li>author list in DESCRIPTION file</li>
+<li>name of package: pum, pum-p, pump</li>
+<li>whether to surface WY functions to the user</li>
+<li>whether to discuss blocking/clustering/etc.</li>
+<li>level of detail introducing MTP</li>
 </ul>
-</div>
-</div>
 </div>
 <div id="shiny-app" class="section level1">
 <h1>Shiny app</h1>
@@ -268,12 +247,13 @@ pre code {
 <ul>
 <li>Potentially use simulations to estimate rho matrix for users when entering other information about data - corr between outcomes, R2’s (Kristen, maybe, TBD)</li>
 <li>tool that helps user build a block matrix of correlations based on a list of correlations between outcomes</li>
-<li>tool the helps user determine correlation between test statistics using simulation</li>
 <li>resolve terminology: MDES, ES, ATE_ES, impact?</li>
 <li>additional designs, including: d3.3_2mff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors</li>
 <li>for sample size, allow a vector of MDES, i.e. combination of zero and nonzero values, and allow for numZero flag</li>
+<li>return raw mdes for individual power to user as comparison/benchmark</li>
 <li>effect size calculator</li>
 <li>speed up everything</li>
+<li>binary outcomes</li>
 </ul>
 </div>
 
