--- a/project_tracker.html
+++ b/project_tracker.html
@@ -191,6 +191,7 @@ pre code {
 <li>multilevel or multi-level</li>
 <li>MDES as plural or singular</li>
 </ul></li>
+<li>discussion of Benjamini-Hochberg</li>
 </ul>
 </div>
 <div id="package-updates" class="section level1">
@@ -231,7 +232,7 @@ pre code {
 <div id="waiting" class="section level1">
 <h1>Waiting</h1>
 <ul>
-<li>merge change from design to d_m</li>
+<li>merge change from design to d_m, new MTP names</li>
 </ul>
 </div>
 <div id="stretch-goals" class="section level1">
@@ -240,6 +241,7 @@ pre code {
 <li>surface WY functions to user with good documentation (KH)</li>
 <li>tool that helps user build a block matrix of correlations based on a list of correlations between outcomes (KH)</li>
 <li>add monte carlo error bars (LM)</li>
+<li>generate a data frame of reasonable defaults for shiny that produce 80% power</li>
 <li>additional designs: d2.2_m2rr, d3.3_2mff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors</li>
 <li>effect size calculator</li>
 <li>speed up everything</li>
