manuscript formatting and project tracker

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -177,29 +177,20 @@ pre code {
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
-<li>finalize a title (anyone)</li>
-<li>render Rmd, deal with formatting and errors (KH)</li>
-<li>add plots to vignette (KH or LM)</li>
-<li>distribute to Evan (KH)</li>
+<li>finalize a title (TBD)</li>
+<li>add plots to vignette (waiting on LM fix)</li>
 <li>add appendices to main document (KH)</li>
 <li>check if JSS allows vignette to be published separately (KH)</li>
 <li>once manuscript is ready, move vignette out into package (KH or LM)</li>
 <li>write abstract (KH or KP)</li>
 <li>prepare for submission (KH)</li>
-<li>grammar edits (KH)
-<ul>
-<li>multilevel or multi-level</li>
-<li>MDES as plural or singular</li>
-</ul></li>
-<li>discussion of Benjamini-Hochberg</li>
+<li>discussion of Benjamini-Hochberg (TBD)</li>
 </ul>
 </div>
 <div id="package-updates" class="section level1">
 <h1>Package updates</h1>
 <ul>
 <li>send out for user testing (KH)</li>
-<li>allow for MDES to have zeros in middle, not just the end (KH)</li>
-<li>for single outcome, remove min1 and complete columns from printout (KH)</li>
 <li>error messaging (KH or LM)
 <ul>
 <li>collect errors from grid and only print out unique errors</li>
@@ -207,19 +198,21 @@ pre code {
 <li>error if user passes same parameter in twice into grid</li>
 </ul></li>
 <li>write simulation correlation tool (KH)</li>
+<li>functions to convert between long and wide (LM)</li>
 <li>plotting code (LM)
 <ul>
 <li>clean up and condense data wrangling</li>
 <li>add new plots for single scenario for mdes, sample size</li>
 <li>make plots prettier</li>
 </ul></li>
-<li>functions to convert between long and wide (LM)</li>
+<li>allow for MDES to have zeros in middle, not just the end (KH)</li>
+<li>for single outcome, remove min1 and complete columns from printout (KH)</li>
 </ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>rerun all validation (KH)</li>
+<li>rerun all validation (KH, in progress)</li>
 <li>render validation documents (KH)</li>
 <li>comprehensive review of WY behavior (KH)
 <ul>
