update project tracker

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -167,59 +167,66 @@ pre code {
 </div>
 
 
-<p>Updated: Dec 21 by KH</p>
-<div id="r-package" class="section level1">
-<h1>R package</h1>
+<p>Updated: Dec 22 by KH</p>
+<div id="r-package-zarni" class="section level1">
+<h1>R package (Zarni)</h1>
 <ul>
 <li>Silence ROxygen documentation for non-exported functions</li>
+<li>double check Min powers returned when numZero &gt;0 (or help KP finally have clarity)</li>
 </ul>
 </div>
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
 <li>finalize a title (TBD)</li>
-<li>add plots to vignette (waiting on LM fix)</li>
-<li>add appendices to main document (KH)</li>
 <li>check if JSS allows vignette to be published separately (KH)</li>
-<li>once manuscript is ready, move vignette out into package (KH or LM)</li>
+<li>add plots to vignette (KH or LM)</li>
 <li>write abstract (KH or KP)</li>
-<li>prepare for submission (KH)</li>
+<li>prepare formatting for submission (KH)</li>
 <li>discussion of Benjamini-Hochberg (TBD)</li>
+</ul>
+<p><em>Waiting</em></p>
+<ul>
+<li>add appendices to main document (waiting on validation to finish KH)</li>
+<li>once manuscript is ready, move vignette into package (KH or LM)</li>
 </ul>
 </div>
 <div id="package-updates" class="section level1">
 <h1>Package updates</h1>
+<p><em>High priority</em></p>
 <ul>
-<li>send out for user testing (KH)</li>
-<li>error messaging (KH or LM)
+<li>recruit people for user testing?</li>
+</ul>
+<p><em>Medium priority</em></p>
 <ul>
-<li>collect errors from grid and only print out unique errors</li>
-<li>better error messaging for flat power curves (both shiny and non-shiny)</li>
-<li>error if user passes same parameter in twice into grid</li>
-</ul></li>
 <li>write simulation correlation tool (KH)</li>
+</ul>
+<p><em>Low priority</em></p>
+<ul>
 <li>functions to convert between long and wide (LM)</li>
 <li>plotting code (LM)
 <ul>
 <li>clean up and condense data wrangling</li>
+<li>add additional plots from vignette?</li>
 <li>add new plots for single scenario for mdes, sample size</li>
 <li>make plots prettier</li>
 </ul></li>
-<li>allow for MDES to have zeros in middle, not just the end (KH)</li>
-<li>for single outcome, remove min1 and complete columns from printout (KH)</li>
+<li>error/other messaging (KH or LM)
+<ul>
+<li>collect errors from grid and only print out unique errors</li>
+<li>better error messaging for flat power curves (both shiny and non-shiny)</li>
+<li>error if user passes same parameter in twice into grid</li>
+<li>give user estimate of runtime for WY (MDES and SS will require extra work)</li>
+</ul></li>
 </ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
+<li>WY validation (KH)</li>
 <li>rerun all validation (KH, in progress)</li>
 <li>render validation documents (KH)</li>
-<li>comprehensive review of WY behavior (KH)
-<ul>
-<li>scenarios from KP</li>
-<li>default parameter values for B for power, mdes, ss</li>
-<li>give user estimate of runtime</li>
-</ul></li>
+<li>incorporate into appendix (KH)</li>
 </ul>
 </div>
 <div id="waiting" class="section level1">
