update project tracker

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -175,11 +175,13 @@ pre code {
 <li>double check Min powers returned when numZero &gt;0 (or help KP finally have clarity)</li>
 </ul>
 </div>
-<div id="discussion" class="section level1">
-<h1>Discussion</h1>
+<div id="kh-1223" class="section level1">
+<h1>KH 12/23</h1>
 <ul>
-<li>plots</li>
-<li>recruit more users for testing</li>
+<li>finalize pdf and send to Luke for pre-submission inquiry</li>
+<li>look into journal submission process</li>
+<li>check if JSS allows vignette to be published separately</li>
+<li>send user test “homework” assignment to Luke</li>
 </ul>
 </div>
 <div id="manuscript" class="section level1">
@@ -187,10 +189,7 @@ pre code {
 <ul>
 <li>finalize a title (TBD)</li>
 <li>cover letter (LM)</li>
-<li>finalize pdf (Kristen)</li>
-<li>look at submission website (Kristen)</li>
-<li>check if JSS allows vignette to be published separately (KH)</li>
-<li>add plots to vignette (KH or LM)</li>
+<li>add plots to vignette (LM)</li>
 <li>write abstract (KH or KP)</li>
 <li>prepare formatting for submission (KH)</li>
 <li>explanation of min power when numZero &gt; 0 (KP)</li>
@@ -239,8 +238,6 @@ pre code {
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>WY validation (KH)</li>
-<li>rerun all validation (KH, in progress)</li>
 <li>render validation documents (KH)</li>
 <li>incorporate into appendix (KH)</li>
 </ul>
