--- a/project_tracker.html
+++ b/project_tracker.html
@@ -172,22 +172,13 @@ pre code {
 <h1>R package</h1>
 <ul>
 <li>Silence ROxygen documentation for non-exported functions (Zarni?)</li>
-<li>double check Min powers returned when numZero &gt;0 (or help KP finally have clarity)</li>
-</ul>
-</div>
-<div id="kh-1223" class="section level1">
-<h1>KH 12/23</h1>
-<ul>
-<li>finalize pdf and send to Luke for pre-submission inquiry</li>
-<li>look into journal submission process</li>
-<li>check if JSS allows vignette to be published separately</li>
-<li>send user test “homework” assignment to Luke</li>
 </ul>
 </div>
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
-<li>finalize a title (TBD)</li>
+<li>look into journal submission process (KH)</li>
+<li>check if JSS allows vignette to be published separately (KH)</li>
 <li>cover letter (LM)</li>
 <li>add plots to vignette (LM)</li>
 <li>write abstract (KH or KP)</li>
@@ -204,11 +195,10 @@ pre code {
 <h1>Package updates</h1>
 <p><em>High priority</em></p>
 <ul>
+<li>send user test “homework” assignment to Luke (KH)</li>
 <li>recruit people for user testing of package (KH/LM)</li>
 <li>add flag to not drop any outcomes (KH)</li>
 <li>fix MDES code for zero MDES (LM)</li>
-<li>check one-sided and two-sided tests (KH)</li>
-<li>WY checks (KH)</li>
 </ul>
 <p><em>Medium priority</em></p>
 <ul>
@@ -231,13 +221,15 @@ pre code {
 </ul></li>
 <li>small things
 <ul>
-<li>user can’t pass in vector of numCovar (KH)</li>
+<li>make sure user can’t pass in vector of numCovar (KH)</li>
 </ul></li>
 </ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
+<li>re-run non-WY validation with sided tests fixed (KH)</li>
+<li>re-run WY validation (KH)</li>
 <li>render validation documents (KH)</li>
 <li>incorporate into appendix (KH)</li>
 </ul>
